--- a/LibraryApp.Solution/LibraryApp.WebApp/Web.config
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Web.config
@@ -16,6 +16,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="DatabaseContext" connectionString="Server=DESKTOP-IF9M7QS;Database=LibraryApp;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
