Added repository and singleton pattern

--- a/LibraryApp.Solution/LibraryApp.DataAccessLayer/LibraryApp.DataAccessLayer.csproj
+++ b/LibraryApp.Solution/LibraryApp.DataAccessLayer/LibraryApp.DataAccessLayer.csproj
@@ -53,6 +53,8 @@
   <ItemGroup>
     <Compile Include="EntityFramework\DatabaseContext.cs" />
     <Compile Include="EntityFramework\MyInitializer.cs" />
+    <Compile Include="EntityFramework\Repository.cs" />
+    <Compile Include="EntityFramework\RepositoryBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
