--- a/LibraryApp.Solution/LibraryApp.BusinessLayer/LibraryApp.BusinessLayer.csproj
+++ b/LibraryApp.Solution/LibraryApp.BusinessLayer/LibraryApp.BusinessLayer.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="BookManager.cs" />
+    <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibraryApp.DataAccessLayer\LibraryApp.DataAccessLayer.csproj">
