--- a/LibraryApp.Solution/LibraryApp.WebApp/LibraryApp.WebApp.csproj
+++ b/LibraryApp.Solution/LibraryApp.WebApp/LibraryApp.WebApp.csproj
@@ -148,6 +148,7 @@
     <Content Include="Scripts\morris.min.js" />
     <Content Include="Scripts\npm.js" />
     <Content Include="Scripts\raphael.min.js" />
+    <Content Include="Scripts\Site.css" />
     <Content Include="Scripts\startmin.js" />
     <Content Include="TEMPLATE.html" />
     <Content Include="Web.config" />
@@ -164,12 +165,13 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-2.1.3.min.map" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\CategoryList.cshtml" />
     <Content Include="Views\Home\BookList.cshtml" />
     <Content Include="Views\Home\Book.cshtml" />
+    <Content Include="Views\Home\RegisterUser.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
