--- a/LibraryApp.Solution/LibraryApp.WebApp/packages.config
+++ b/LibraryApp.Solution/LibraryApp.WebApp/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
   <package id="jQuery" version="2.1.3" targetFramework="net461" />
+  <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
