--- a/LibraryApp.Solution/LibraryApp.Entities/LibraryApp.Entities.csproj
+++ b/LibraryApp.Solution/LibraryApp.Entities/LibraryApp.Entities.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Borrow.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="EntityBase.cs" />
+    <Compile Include="Messages\ErrorMessageCode.cs" />
+    <Compile Include="Messages\ErrorMessageObj.cs" />
     <Compile Include="ModelViews\LoginViewModel.cs" />
     <Compile Include="ModelViews\RegisterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -65,7 +67,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
