--- a/LibraryApp.Solution/LibraryApp.Entities/LibraryApp.Entities.csproj
+++ b/LibraryApp.Solution/LibraryApp.Entities/LibraryApp.Entities.csproj
@@ -67,9 +67,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
