--- a/LibraryApp.Solution/LibraryApp.WebApp/LibraryApp.WebApp.csproj
+++ b/LibraryApp.Solution/LibraryApp.WebApp/LibraryApp.WebApp.csproj
@@ -149,7 +149,7 @@
     <Content Include="Scripts\morris.min.js" />
     <Content Include="Scripts\npm.js" />
     <Content Include="Scripts\raphael.min.js" />
-    <Content Include="Scripts\Site.css" />
+    <Content Include="Content\Site.css" />
     <Content Include="Scripts\startmin.js" />
     <Content Include="TEMPLATE.html" />
     <Content Include="Web.config" />
