--- a/LibraryApp.Solution/LibraryApp.BusinessLayer/LibraryApp.BusinessLayer.csproj
+++ b/LibraryApp.Solution/LibraryApp.BusinessLayer/LibraryApp.BusinessLayer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddressManager.cs" />
     <Compile Include="BusinessLayerResult.cs" />
     <Compile Include="CategoryManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
